test/users/ferguson/badcallerror.good
badcallerror.chpl:3: error: Cannot assign to int(64) from chpl__fcf_type_void_int64_t
